# DAW

./: README.md
Examen PHP/: Adivina.php  DisFruta.php
Examen PHP/MuestraCartas/: index.html
Examen PHP/ParesNones/: ParesNones.php
JavaScript/1.- Ejercicios Adicionales - Números Primos/: ejercicio1.css  ejercicio1.html  ejercicio1.js
JavaScript/2.- Ejercicios Adicionales - Cifrado César/: cesar.html
JavaScript/3.- Ejercicios Adicionales - Sopa de Letras/: letras.css  letras.html
JavaScript/3.1.- Solucion-Ejercicio3_SopaDeLetras/: index.html
JavaScript/4.- Palabra oculta/: oculta.html
JavaScript/5.- EjerciciosDOM/Ejercicio_1/: ej1.html  main.js
JavaScript/5.- EjerciciosDOM/Ejercicio_10/: Ej10.html  main.js
JavaScript/5.- EjerciciosDOM/Ejercicio_11/: Ej11.html  main.js
JavaScript/5.- EjerciciosDOM/Ejercicio_12/: Ej12.html  main.js  (+1 more)
JavaScript/6.- Validación de Formularios/: FormularioCompleto.html  main.js
JavaScript/Examen - AJAX/: canalDAW.json  index.html  style.css
Laravel/: README.md
Laravel/TelegramBot/: .env.example  composer.json
Laravel/Wizard-test/: .env.example  composer.json
PHP/CRUD2.0/: borrar.php  conexion.php  edit.php  index.html  insert.php  main.js  show.php  update.php
PHP/Ejercicios - Tanda 5/: Ejercicio1-14.php  Ejercicio15.php  Ejercicio16.php  Ejercicio17.php  Ejercicio18.php  Ejercicio19.php  Ejercicio20-28.php  Ejercicio29-34.php
Proyecto fin de grado/: README.md
Proyecto fin de grado/GyMedia/: GyMedia_Presentación.pptx  README.md
Python/DJango/: README.md
Python/DJango/4. News/poetry/: pyproject.toml
(+685 files in other folders)
